[maven-release-plugin] prepare release switching-view-handler-1.0
git-svn-id: file:///home/jj/tmp/03/test/jsf/switching-view-handler/trunk@1079 47c31762-6b29-4373-b216-300fc8bc8a7b

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.acu.wip.jsf.facelets</groupId>
     <artifactId>switching-view-handler</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <build>
         <plugins>
@@ -113,7 +110,7 @@
         </snapshotRepository>
     </distributionManagement>
     <scm>
-        <connection>scm:svn:https://wip004.acu.edu/repos/wip/jsf/switching-view-handler/trunk</connection>
-        <developerConnection>scm:svn:https://wip004.acu.edu/repos/wip/jsf/switching-view-handler/trunk</developerConnection>
+        <connection>scm:svn:https://wip004.acu.edu/repos/wip/jsf/switching-view-handler/tags/switching-view-handler-1.0</connection>
+        <developerConnection>scm:svn:https://wip004.acu.edu/repos/wip/jsf/switching-view-handler/tags/switching-view-handler-1.0</developerConnection>
     </scm>
 </project>
